fixed navbar overlapping issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,11 +16,14 @@ body {
   font-family: "Exo 2", sans-serif;
 }
 
-/* main {
+main {
   width: 100%;
-} */
+}
 
 /* Navbar customizations starts */
+header {
+  position: absolute;
+}
 a {
   text-decoration: none;
 }
@@ -45,15 +48,14 @@ a {
   text-transform: lowercase;
 }
 
-nav {
-  /* to make navbar sticky */
-  position: fixed;
-  width: 100%;
-}
-
 .container-nav {
+  position: fixed;
   z-index: 9999;
+  width: 100%;
+  height: 4rem;
   top: 0;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: space-between;
   font-size: 1.2rem;
@@ -64,13 +66,13 @@ nav {
   border-radius: 5px;
   list-style: none;
   padding: 0.6rem;
+  background: #d4fedd;
 }
 
 ul a:hover {
   background-color: hsl(160, 100%, 75%);
   color: rgb(255, 255, 255);
   padding: 0.6rem;
-  /* transition: ease-in-out 0.3s; */
   transition: all 0.3s ease 0s;
   border-radius: 5px;
 }
